@@ -76,3 +76,4 @@ Revision	Log Message
 74		Stat floor of 0 for CK2 characters
 75		Seniority succession
 76		Added 'Lowborn' dynasty
+77		Correct lower bound for stats to 3
